Fix iOS flickering issues?

--- a/source/stylesheets/_syntax.css.scss
+++ b/source/stylesheets/_syntax.css.scss
@@ -12,6 +12,7 @@
   margin-bottom: 20px;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
+  -webkit-backface-visibility: hidden;
 }
 
 .wrap-button {
